# disk-manager

./: .gitignore  README.md  main.py  pyproject.toml
src/api/: asgi_app.py  exception_handlers.py
src/api/dto/: input.py  output.py
src/api/routes/: __init__.py
src/api/routes/v1/: base.py  disks.py
src/config/: settings.py
src/config/static/: app.js
src/config/templates/: index.html
src/internal/io/: dependencies.py
src/services/: disk_service.py
tests/unit/: conftest.py
tests/unit/services/: test_disk_service.py
