[project]
name = "disk-manager"
version = "0.1.0"
description = "disk-manager (Using UV)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
